<resources>
    <string name="app_name">PianoApp</string>
    <string name="GenerateButton">Generate</string>
    <string name="CustomizeButton">Customize</string>
    <string name="scale_tester">Scale Tester</string>
    <string name="choose_your_scales">Choose your scales</string>
    <string name="add">Add</string>
    <string name="CustomBack">Button</string>
    <string name="CustomButtom"><![CDATA[<---]]></string>
    <string name="Reset">Reset</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="restartButton">Restart</string>
    <string name="customize">+</string>
    <string name="back_button">Back</string>
    <string name="main_text">START</string>

    <string-array name= "spinner1">
        <item>C</item> <item>D</item> <item>E</item>
        <item>F</item> <item>G</item> <item>A</item>
        <item>B</item>
    </string-array>

    <string-array name= "spinner2">
        <item>Sharp</item> <item>Flat</item> <item>---</item>
    </string-array>

    <string-array name= "spinner3">
        <item>Major</item> <item>Minor</item>
    </string-array>

    <string-array name= "spinner4">
        <item>Harmonic</item> <item>Melodic</item> <item>Dominant 7th</item>
        <item>Diminished 7th</item> <item>"---"</item>
    </string-array>

    <string-array name= "spinner5">
        <item>Scale</item> <item>triad</item> <item>3 Note Chord</item>
        <item>4 Note Chord</item>  <item>Arpeggio</item>
    </string-array>

</resources>